Fixed bug with positioning header selector. Fixed bug with long absolute positioned things being cut off.

--- a/system/css/jquery.pgrid.default.css
+++ b/system/css/jquery.pgrid.default.css
@@ -16,6 +16,7 @@
 ----------------------------------*/
 .ui-pgrid-table-container {
 	overflow: auto;
+	position: relative;
 }
 
 /* Header selector
@@ -25,6 +26,8 @@
 	position: absolute;
 	display: none;
 	padding: 3px;
+	left: 2px;
+	top: 2px;
 }
 .ui-pgrid .ui-pgrid-header-select label {
 	display: block;
